--- a/RaidLog.Spa/packages.config
+++ b/RaidLog.Spa/packages.config
@@ -10,10 +10,10 @@
   <package id="FontAwesome" version="3.0.2.3" targetFramework="net45" />
   <package id="FontAwesome" version="3.2.1" targetFramework="net45" />
   <package id="jQuery" version="2.0.2" targetFramework="net45" />
-  <package id="jquery.TypeScript.DefinitelyTyped" version="0.1.9" targetFramework="net45" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="0.2.0" targetFramework="net45" />
   <package id="Knockout.Mapping" version="2.4.0" targetFramework="net45" />
   <package id="knockout.mapping.TypeScript.DefinitelyTyped" version="0.0.5" targetFramework="net45" />
-  <package id="knockout.TypeScript.DefinitelyTyped" version="0.2.2" targetFramework="net45" />
+  <package id="knockout.TypeScript.DefinitelyTyped" version="0.2.3" targetFramework="net45" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net45" />
   <package id="knockout.validation.TypeScript.DefinitelyTyped" version="0.0.6" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.1" targetFramework="net45" />
@@ -30,7 +30,9 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.0.19" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.7" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.1.10" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="modernizr.TypeScript.DefinitelyTyped" version="0.0.5" targetFramework="net45" />
@@ -38,7 +40,7 @@
   <package id="moment.TypeScript.DefinitelyTyped" version="0.0.4" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
-  <package id="requirejs.TypeScript.DefinitelyTyped" version="0.0.4" targetFramework="net45" />
+  <package id="requirejs.TypeScript.DefinitelyTyped" version="0.0.5" targetFramework="net45" />
   <package id="toastr" version="1.3.1" targetFramework="net45" />
   <package id="toastr.TypeScript.DefinitelyTyped" version="0.0.7" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net45" />
