--- a/RaidLog.Spa/RaidLog.Spa.csproj
+++ b/RaidLog.Spa/RaidLog.Spa.csproj
@@ -45,14 +45,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\WebGrease.1.3.0\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
-    <Reference Include="Autofac">
-      <HintPath>..\packages\Autofac.3.0.2\lib\net40\Autofac.dll</HintPath>
+    <Reference Include="Autofac, Version=3.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Autofac.3.1.1\lib\net40\Autofac.dll</HintPath>
     </Reference>
-    <Reference Include="Autofac.Configuration">
-      <HintPath>..\packages\Autofac.3.0.2\lib\net40\Autofac.Configuration.dll</HintPath>
-    </Reference>
-    <Reference Include="Autofac.Integration.WebApi">
-      <HintPath>..\packages\Autofac.WebApi.3.0.2\lib\net40\Autofac.Integration.WebApi.dll</HintPath>
+    <Reference Include="Autofac.Integration.WebApi, Version=3.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Autofac.WebApi.3.1.0\lib\net40\Autofac.Integration.WebApi.dll</HintPath>
     </Reference>
     <Reference Include="Dapper">
       <HintPath>..\packages\Dapper.1.13\lib\net45\Dapper.dll</HintPath>
@@ -189,6 +188,13 @@
       <DependentUpon>logger.ts</DependentUpon>
     </Content>
     <Content Include="App\services\logger.ts" />
+    <Content Include="App\viewmodels\EditableViewModel.js">
+      <DependentUpon>EditableViewModel.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\EditableViewModel.min.js">
+      <DependentUpon>EditableViewModel.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\EditableViewModel.ts" />
     <Content Include="App\viewmodels\maintainProject.js">
       <DependentUpon>maintainProject.ts</DependentUpon>
     </Content>
@@ -196,6 +202,13 @@
       <DependentUpon>maintainProject.ts</DependentUpon>
     </Content>
     <Content Include="App\viewmodels\maintainProject.ts" />
+    <Content Include="App\viewmodels\MasterDetailViewModel.js">
+      <DependentUpon>MasterDetailViewModel.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\MasterDetailViewModel.min.js">
+      <DependentUpon>MasterDetailViewModel.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\MasterDetailViewModel.ts" />
     <Content Include="App\viewmodels\pagedGrid.js">
       <DependentUpon>pagedGrid.ts</DependentUpon>
     </Content>
@@ -210,6 +223,27 @@
       <DependentUpon>projectList.ts</DependentUpon>
     </Content>
     <Content Include="App\viewmodels\projectList.ts" />
+    <Content Include="App\viewmodels\riskList.js">
+      <DependentUpon>riskList.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\riskList.min.js">
+      <DependentUpon>riskList.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\riskList.ts" />
+    <Content Include="App\viewmodels\RiskListViewModel.js">
+      <DependentUpon>RiskListViewModel.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\RiskListViewModel.min.js">
+      <DependentUpon>RiskListViewModel.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\RiskListViewModel.ts" />
+    <Content Include="App\viewmodels\RiskViewModel.js">
+      <DependentUpon>RiskViewModel.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\RiskViewModel.min.js">
+      <DependentUpon>RiskViewModel.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\RiskViewModel.ts" />
     <Content Include="App\viewmodels\shell.js">
       <DependentUpon>shell.ts</DependentUpon>
     </Content>
@@ -265,10 +299,12 @@
     <Content Include="Scripts\durandal\viewEngine.js" />
     <Content Include="Scripts\durandal\viewLocator.js" />
     <Content Include="Scripts\durandal\viewModelBinder.js" />
-    <None Include="Scripts\jquery-2.0.2.intellisense.js" />
     <Content Include="Scripts\jquery-2.0.2.js" />
     <Content Include="Scripts\jquery-2.0.2.min.js" />
-    <Content Include="Scripts\jquery-2.0.2.min.map" />
+    <None Include="Scripts\jquery-2.0.3.intellisense.js" />
+    <Content Include="Scripts\jquery-2.0.3.js" />
+    <Content Include="Scripts\jquery-2.0.3.min.js" />
+    <Content Include="Scripts\jquery-2.0.3.min.map" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -291,6 +327,8 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\knockout-2.2.1.debug.js" />
     <Content Include="Scripts\knockout-2.2.1.js" />
+    <Content Include="Scripts\knockout-2.3.0.debug.js" />
+    <Content Include="Scripts\knockout-2.3.0.js" />
     <Content Include="Scripts\knockout.mapping-latest.debug.js" />
     <Content Include="Scripts\knockout.mapping-latest.js" />
     <Content Include="Scripts\knockout.validation.debug.js" />
