--- a/RaidLog.Spa/packages.config
+++ b/RaidLog.Spa/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="Autofac" version="3.1.1" targetFramework="net45" />
   <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net45" />
   <package id="Autofac.WebApi" version="3.1.0" targetFramework="net45" />
+  <package id="Bootstrap.Datepicker" version="1.1.3.1" targetFramework="net45" />
+  <package id="bootstrap.datepicker.TypeScript.DefinitelyTyped" version="0.0.2" targetFramework="net45" />
   <package id="Bootstrap.DateTimePicker" version="0.0.11" targetFramework="net45" />
   <package id="bootstrap.TypeScript.DefinitelyTyped" version="0.0.4" targetFramework="net45" />
   <package id="Dapper" version="1.13" targetFramework="net45" />
@@ -14,7 +17,7 @@
   <package id="jquery.TypeScript.DefinitelyTyped" version="0.2.0" targetFramework="net45" />
   <package id="Knockout.Mapping" version="2.4.0" targetFramework="net45" />
   <package id="knockout.mapping.TypeScript.DefinitelyTyped" version="0.0.5" targetFramework="net45" />
-  <package id="knockout.TypeScript.DefinitelyTyped" version="0.2.4" targetFramework="net45" />
+  <package id="knockout.TypeScript.DefinitelyTyped" version="0.2.5" targetFramework="net45" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net45" />
   <package id="knockout.validation.TypeScript.DefinitelyTyped" version="0.0.6" targetFramework="net45" />
   <package id="knockoutjs" version="2.3.0" targetFramework="net45" />
@@ -46,5 +49,5 @@
   <package id="toastr.TypeScript.DefinitelyTyped" version="0.0.7" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="2.3.2" targetFramework="net45" />
-  <package id="WebGrease" version="1.3.0" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
