--- a/RaidLog.Spa/RaidLog.Spa.csproj
+++ b/RaidLog.Spa/RaidLog.Spa.csproj
@@ -191,70 +191,70 @@
     <Content Include="App\services\dataService.min.js">
       <DependentUpon>dataService.ts</DependentUpon>
     </Content>
-    <Content Include="App\services\dataService.ts" />
+    <TypeScriptCompile Include="App\services\dataService.ts" />
     <Content Include="App\services\logger.js">
       <DependentUpon>logger.ts</DependentUpon>
     </Content>
     <Content Include="App\services\logger.min.js">
       <DependentUpon>logger.ts</DependentUpon>
     </Content>
-    <Content Include="App\services\logger.ts" />
+    <TypeScriptCompile Include="App\services\logger.ts" />
     <Content Include="App\services\routeFactory.js">
       <DependentUpon>routeFactory.ts</DependentUpon>
     </Content>
     <Content Include="App\services\routeFactory.min.js">
       <DependentUpon>routeFactory.ts</DependentUpon>
     </Content>
-    <Content Include="App\services\routeFactory.ts" />
+    <TypeScriptCompile Include="App\services\routeFactory.ts" />
     <Content Include="App\viewmodels\assumptionDetails.js">
       <DependentUpon>assumptionDetails.ts</DependentUpon>
     </Content>
     <Content Include="App\viewmodels\assumptionDetails.min.js">
       <DependentUpon>assumptionDetails.ts</DependentUpon>
     </Content>
-    <Content Include="App\viewmodels\assumptionDetails.ts" />
+    <TypeScriptCompile Include="App\viewmodels\assumptionDetails.ts" />
     <Content Include="App\viewmodels\assumptionList.js">
       <DependentUpon>assumptionList.ts</DependentUpon>
     </Content>
     <Content Include="App\viewmodels\assumptionList.min.js">
       <DependentUpon>assumptionList.ts</DependentUpon>
     </Content>
-    <Content Include="App\viewmodels\assumptionList.ts" />
+    <TypeScriptCompile Include="App\viewmodels\assumptionList.ts" />
     <Content Include="App\viewmodels\EditableViewModel.js">
       <DependentUpon>EditableViewModel.ts</DependentUpon>
     </Content>
     <Content Include="App\viewmodels\EditableViewModel.min.js">
       <DependentUpon>EditableViewModel.ts</DependentUpon>
     </Content>
-    <Content Include="App\viewmodels\EditableViewModel.ts" />
+    <TypeScriptCompile Include="App\viewmodels\EditableViewModel.ts" />
     <Content Include="App\viewmodels\maintainProject.js">
       <DependentUpon>maintainProject.ts</DependentUpon>
     </Content>
     <Content Include="App\viewmodels\maintainProject.min.js">
       <DependentUpon>maintainProject.ts</DependentUpon>
     </Content>
-    <Content Include="App\viewmodels\maintainProject.ts" />
+    <TypeScriptCompile Include="App\viewmodels\maintainProject.ts" />
     <Content Include="App\viewmodels\MasterDetailViewModel.js">
       <DependentUpon>MasterDetailViewModel.ts</DependentUpon>
     </Content>
     <Content Include="App\viewmodels\MasterDetailViewModel.min.js">
       <DependentUpon>MasterDetailViewModel.ts</DependentUpon>
     </Content>
-    <Content Include="App\viewmodels\MasterDetailViewModel.ts" />
+    <TypeScriptCompile Include="App\viewmodels\MasterDetailViewModel.ts" />
     <Content Include="App\viewmodels\pagedGrid.js">
       <DependentUpon>pagedGrid.ts</DependentUpon>
     </Content>
     <Content Include="App\viewmodels\pagedGrid.min.js">
       <DependentUpon>pagedGrid.ts</DependentUpon>
     </Content>
-    <Content Include="App\viewmodels\pagedGrid.ts" />
+    <TypeScriptCompile Include="App\viewmodels\pagedGrid.ts" />
     <Content Include="App\viewmodels\projectList.js">
       <DependentUpon>projectList.ts</DependentUpon>
     </Content>
     <Content Include="App\viewmodels\projectList.min.js">
       <DependentUpon>projectList.ts</DependentUpon>
     </Content>
-    <Content Include="App\viewmodels\projectList.ts" />
+    <TypeScriptCompile Include="App\viewmodels\projectList.ts" />
     <Content Include="App\viewmodels\riskDetails.js">
       <DependentUpon>riskDetails.ts</DependentUpon>
     </Content>
@@ -267,15 +267,15 @@
     <Content Include="App\viewmodels\riskList.min.js">
       <DependentUpon>riskList.ts</DependentUpon>
     </Content>
-    <Content Include="App\viewmodels\riskList.ts" />
-    <Content Include="App\viewmodels\riskDetails.ts" />
+    <TypeScriptCompile Include="App\viewmodels\riskList.ts" />
+    <TypeScriptCompile Include="App\viewmodels\riskDetails.ts" />
     <Content Include="App\viewmodels\shell.js">
       <DependentUpon>shell.ts</DependentUpon>
     </Content>
     <Content Include="App\viewmodels\shell.min.js">
       <DependentUpon>shell.ts</DependentUpon>
     </Content>
-    <Content Include="App\viewmodels\shell.ts" />
+    <TypeScriptCompile Include="App\viewmodels\shell.ts" />
     <Content Include="App\views\assumptionList.html" />
     <Content Include="App\views\maintainProject.html" />
     <Content Include="App\views\projectList.html" />
@@ -288,7 +288,7 @@
     <Content Include="App\widgets\BootstrapFormWidgetSettings.min.js">
       <DependentUpon>BootstrapFormWidgetSettings.ts</DependentUpon>
     </Content>
-    <Content Include="App\widgets\BootstrapFormWidgetSettings.ts" />
+    <TypeScriptCompile Include="App\widgets\BootstrapFormWidgetSettings.ts" />
     <Content Include="App\widgets\select\view_noErrors.html" />
     <Content Include="App\widgets\select\view.html" />
     <Content Include="App\widgets\select\viewmodel.js">
@@ -297,7 +297,7 @@
     <Content Include="App\widgets\select\viewmodel.min.js">
       <DependentUpon>viewmodel.ts</DependentUpon>
     </Content>
-    <Content Include="App\widgets\select\viewmodel.ts" />
+    <TypeScriptCompile Include="App\widgets\select\viewmodel.ts" />
     <Content Include="App\widgets\textarea\view.html" />
     <Content Include="App\widgets\textarea\viewmodel.js">
       <DependentUpon>viewmodel.ts</DependentUpon>
@@ -305,7 +305,7 @@
     <Content Include="App\widgets\textarea\viewmodel.min.js">
       <DependentUpon>viewmodel.ts</DependentUpon>
     </Content>
-    <Content Include="App\widgets\textarea\viewmodel.ts" />
+    <TypeScriptCompile Include="App\widgets\textarea\viewmodel.ts" />
     <Content Include="App\widgets\textfield\view_unvalidated.html" />
     <Content Include="App\widgets\textfield\view.html" />
     <Content Include="App\widgets\textfield\viewmodel.js">
@@ -314,7 +314,7 @@
     <Content Include="App\widgets\textfield\viewmodel.min.js">
       <DependentUpon>viewmodel.ts</DependentUpon>
     </Content>
-    <Content Include="App\widgets\textfield\viewmodel.ts" />
+    <TypeScriptCompile Include="App\widgets\textfield\viewmodel.ts" />
     <Content Include="Content\bootstrap-datepicker.css" />
     <Content Include="Content\bootstrap-datetimepicker.min.css" />
     <Content Include="Content\durandal.css" />
@@ -364,6 +364,21 @@
     <Content Include="Scripts\durandal\viewEngine.js" />
     <Content Include="Scripts\durandal\viewLocator.js" />
     <Content Include="Scripts\durandal\viewModelBinder.js" />
+    <Content Include="App\services\routeFactory.js.map">
+      <DependentUpon>routeFactory.ts</DependentUpon>
+    </Content>
+    <Content Include="App\services\logger.js.map">
+      <DependentUpon>logger.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\shell.js.map">
+      <DependentUpon>shell.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\maintainProject.js.map">
+      <DependentUpon>maintainProject.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\projectList.js.map">
+      <DependentUpon>projectList.ts</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\jquery-2.0.3.js" />
     <Content Include="Scripts\jquery-2.0.3.min.js" />
@@ -487,6 +502,17 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v11.0\TypeScript\Microsoft.TypeScript.targets" Condition="true" />
+  <PropertyGroup>
+    <TypeScriptTarget>ES5</TypeScriptTarget>
+    <TypeScriptIncludeComments>true</TypeScriptIncludeComments>
+    <TypeScriptModuleKind>amd</TypeScriptModuleKind>
+    <TypeScriptSourceMap>true</TypeScriptSourceMap>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <TypeScriptIncludeComments>false</TypeScriptIncludeComments>
+    <TypeScriptSourceMap>false</TypeScriptSourceMap>
+  </PropertyGroup>
   <Target Name="MvcBuildViews" AfterTargets="AfterBuild" Condition="'$(MvcBuildViews)'=='true'">
     <AspNetCompiler VirtualPath="temp" PhysicalPath="$(WebProjectOutputDir)" />
   </Target>
@@ -516,8 +542,9 @@
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.8\tools\Microsoft.Bcl.Build.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
+	-->
+  <Target Name="BuildTS">
+    <Message Text="BeforeBuild: Compiling TypeScript files" />
+    <Exec Command="&quot;$(ProgramFiles)\Microsoft SDKs\TypeScript\tsc.exe&quot; --module amd --target ES5  @(TypeScriptCompile ->'&quot;%(fullpath)&quot;', ' ')" />
   </Target>
-  <Target Name="AfterBuild">
-  </Target> -->
 </Project>
