--- a/RaidLog.Spa/RaidLog.Spa.csproj
+++ b/RaidLog.Spa/RaidLog.Spa.csproj
@@ -151,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\DurandalBundleConfig.cs" />
+    <Compile Include="Controllers\ActionsController.cs" />
     <Compile Include="Controllers\AssumptionsController.cs" />
     <Compile Include="Controllers\DependenciesController.cs" />
     <Compile Include="Controllers\IssueController.cs" />
@@ -158,14 +159,17 @@
     <Compile Include="Controllers\QueriesController.cs" />
     <Compile Include="Controllers\RaidLogApiController.cs" />
     <Compile Include="Controllers\RisksController.cs" />
+    <Compile Include="Models\ActionDto.cs" />
     <Compile Include="Models\AssumptionDto.cs" />
     <Compile Include="Models\DeleteProject.cs" />
     <Compile Include="Models\DependencyDto.cs" />
+    <Compile Include="Models\EditAction.cs" />
     <Compile Include="Models\EditAssumptionDto.cs" />
     <Compile Include="Models\EditIssueDto.cs" />
     <Compile Include="Models\EditProject.cs" />
     <Compile Include="Models\EditRiskDto.cs" />
     <Compile Include="Models\IssueDto.cs" />
+    <Compile Include="Models\NewActionDto.cs" />
     <Compile Include="Models\NewAssumptionDto.cs" />
     <Compile Include="Models\NewIssueDto.cs" />
     <Compile Include="Models\NewProject.cs" />
@@ -179,6 +183,7 @@
     </Compile>
     <Compile Include="Models\RiskDto.cs" />
     <Compile Include="Models\UpdateFailure.cs" />
+    <Compile Include="Queries\ActionQueries.cs" />
     <Compile Include="Queries\AssumptionsQueries.cs" />
     <Compile Include="Queries\IssueQueries.cs" />
     <Compile Include="Queries\ProjectQueries.cs" />
