--- a/RaidLog.Spa/RaidLog.Spa.csproj
+++ b/RaidLog.Spa/RaidLog.Spa.csproj
@@ -160,11 +160,13 @@
     <Compile Include="Controllers\RaidLogApiController.cs" />
     <Compile Include="Controllers\RisksController.cs" />
     <Compile Include="Models\ActionDto.cs" />
+    <Compile Include="Models\NewDependencyDto.cs" />
     <Compile Include="Models\AssumptionDto.cs" />
     <Compile Include="Models\DeleteProject.cs" />
     <Compile Include="Models\DependencyDto.cs" />
     <Compile Include="Models\EditAction.cs" />
     <Compile Include="Models\EditAssumptionDto.cs" />
+    <Compile Include="Models\EditDependencyDto.cs" />
     <Compile Include="Models\EditIssueDto.cs" />
     <Compile Include="Models\EditProject.cs" />
     <Compile Include="Models\EditRiskDto.cs" />
@@ -185,6 +187,7 @@
     <Compile Include="Models\UpdateFailure.cs" />
     <Compile Include="Queries\ActionQueries.cs" />
     <Compile Include="Queries\AssumptionsQueries.cs" />
+    <Compile Include="Queries\DependencyQueries.cs" />
     <Compile Include="Queries\IssueQueries.cs" />
     <Compile Include="Queries\ProjectQueries.cs" />
     <Compile Include="Queries\ReferenceDataQueries.cs" />
